[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py-ledger"
version = "0.1.0"
authors = [
  { name="triv321", email="nahi_bataunga@nahibataunga.com" },
]
description = "A ledger to manage your finances"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]

ledger = "py_ledger.cli:cli"
